# hobbes

./: .gitignore  .gitmodules  README.md
dynamodb/create_table/: cdk.json  package-lock.json  package.json
dynamodb/create_table/lib/: create_table-stack.ts
dynamodb/create_table/test/: create_table.test.ts
dynamodb/lambda_write_dynamodb/lib/: lambda_write_dynamodb-stack.ts
dynamodb/lambda_write_to_table/cdk/: cdk.json  dock.bkp  package-lock.json  package.json
dynamodb/lambda_write_to_table/cdk/lib/: lambda_write_dynamodb-stack.ts
dynamodb/lambda_write_to_table/cdk/test/: lambda_write_dynamodb.test.ts
dynamodb/lambda_write_to_table/lambda/: Cargo.toml  Dockerfile
dynamodb/lambda_write_to_table/lambda/src/: main.rs
dynamodb/lambda_write_to_table_stack/: cdk.json  package-lock.json  package.json
dynamodb/lambda_write_to_table_stack/lib/: lambda_write_to_table_stack-stack.ts
dynamodb/lambda_write_to_table_stack/test/: lambda_write_to_table_stack.test.ts
ecs/cdk/lib/: cdk-stack.ts
ecs/ecs/: Dockerfile  app.js  package.json
eventbridge/: cdk.json  package.json
eventbridge/lib/: eventbridge-stack.ts
network_load_balancer/cdk/lib/: cdk-stack.ts
s3/cdk/: package.json
s3/cdk/lib/: s3-stack.ts
s3/lambda/: Cargo.toml  Dockerfile
s3/lambda/src/: main.rs
s3/lambdas/: Cargo.toml
s3/lambdas/on_upload_event/: Cargo.toml  Dockerfile
s3/lambdas/on_upload_event/src/: main.rs
s3/s3_bucket_events/cdk/: cdk.json  package.json
s3/s3_bucket_events/cdk/format_test/: Cargo.toml
s3/s3_bucket_events/cdk/format_test/src/: main.rs
s3/s3_bucket_events/cdk/lib/: s3-stack.ts
s3/s3_bucket_events/lambda_datafile_event/: Cargo.toml
s3/s3_bucket_events/lambda_datafile_event/src/: main.rs
s3/s3_bucket_events/lambdas/: Cargo.toml
s3/s3_bucket_events/lambdas/handlers/event_fired_on_data_put/: Cargo.toml
s3/s3_bucket_events/lambdas/handlers/event_fired_on_data_put/src/: lib.rs
s3/s3_bucket_events/lambdas/lambda_data_s3_upload/: Cargo.toml
s3/s3_bucket_events/lambdas/lambda_data_s3_upload/src/: main.rs
s3/split_on_event/cdk/lib/: s3-stack.ts
s3/split_on_event/lambda_object_access_point/: Cargo.toml
s3/split_on_event/lambda_object_access_point/src/: main.rs
vpc/: package.json
vpc/lib/: environment-stack.d.ts
